Z-index fixed

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,6 @@
-
+body {
+    background: #d1ecf7;
+}
 .perspective {
 
 	position: fixed;
@@ -7,7 +9,6 @@
 	right: 0px;
 	bottom: 0px;
 	perspective: 1000px;
-	background: #d1ecf7;
 
   .block {
     	transform-style: preserve-3d;
